<resources>
    <string name="app_name">Расписание</string>
    <string name="calendar">Календарь</string>
    <string name="weeks">Недели</string>
    <string name="preferences">Настройки</string>
    <string name="changeGroup">Изменить группу</string>
    <string name="noLessons">Сегодня нет занятий</string>
    <string name="changeSchedule">Изменить расписание</string>
    <string name="send">Отправить</string>

    <string name="beginTime">Время начала</string>
    <string name="endTime">Время окончания</string>
    <string name="name">Название предмета</string>
    <string name="teacher">Преподаватель</string>
    <string name="location">Аудитория</string>
    <string name="type">Тип пары</string>

    <!--<string name="vk">&lt;a href="https://vk.com/kpfu_schedule">vk.com/kpfu_schedule&lt;/a></string> -->
    <string name="vk_href">https://vk.com/kpfu_schedule</string>
    <string name="vk_string">vk.com/kpfu_schedule</string>

    <string-array name="week_style_entries">
        <item>Верхняя - Нижняя</item>
        <item>Чётная - Нечётная</item>
    </string-array>

    <string-array name="week_style_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
