<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/typeWeeks"
        android:icon="@drawable/ic_view_week_48dp"
        android:title="@string/weeks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/calendar"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reloadSchedule"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/reloadSchedule" />
</menu>